--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1060,17 +1060,25 @@ $form-multi-select-search-color:          $input-color !default;
 $form-multi-select-search-bg:             $input-bg !default;
 $form-multi-select-search-border-radius:  $border-radius !default;
 
-$form-multi-select-cleaner-width:            .75rem !default;
-$form-multi-select-cleaner-height:           .75rem !default;
-$form-multi-select-cleaner-padding-x:        .5rem !default;
-$form-multi-select-cleaner-padding-y:        $form-multi-select-cleaner-padding-x !default;
-$form-multi-select-cleaner-color:            $medium-emphasis !default;
-$form-multi-select-cleaner-bg:               url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$form-multi-select-cleaner-color}'><path d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/></svg>") !default;
-$form-multi-select-cleaner-hover-color:      $high-emphasis !default;
-$form-multi-select-cleaner-hover-bg:         url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$form-multi-select-cleaner-hover-color}'><path d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/></svg>") !default;
-$form-multi-select-cleaner-focus-color:      $high-emphasis !default;
-$form-multi-select-cleaner-focus-bg:         url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$form-multi-select-cleaner-focus-color}'><path d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/></svg>") !default;
+$form-multi-select-cleaner-width:         .75rem !default;
+$form-multi-select-cleaner-height:        .75rem !default;
+$form-multi-select-cleaner-padding-x:     .5rem !default;
+$form-multi-select-cleaner-padding-y:     $form-multi-select-cleaner-padding-x !default;
+$form-multi-select-cleaner-color:         $medium-emphasis !default;
+$form-multi-select-cleaner-bg:            url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$form-multi-select-cleaner-color}'><path d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/></svg>") !default;
+$form-multi-select-cleaner-hover-color:   $high-emphasis !default;
+$form-multi-select-cleaner-hover-bg:      url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$form-multi-select-cleaner-hover-color}'><path d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/></svg>") !default;
+$form-multi-select-cleaner-focus-color:   $high-emphasis !default;
+$form-multi-select-cleaner-focus-bg:      url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$form-multi-select-cleaner-focus-color}'><path d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/></svg>") !default;
+$form-multi-select-cleaner-border-color:  $input-border-color !default;
 
+$form-multi-select-select-all-padding-y:     .5rem !default;
+$form-multi-select-select-all-padding-x:     .75rem !default;
+$form-multi-select-select-all-color:         $medium-emphasis !default;
+$form-multi-select-select-all-bg:            transparent !default;
+$form-multi-select-select-all-hover-color:   $high-emphasis !default;
+$form-multi-select-select-all-hover-bg:      transparent !default;
+$form-multi-select-select-all-border-color:  $input-border-color !default;
 
 $form-multi-select-options-padding-y:      .5rem !default;
 $form-multi-select-options-padding-x:      .75rem !default;
@@ -1083,13 +1091,14 @@ $form-multi-select-options-border-width:   $border-width !default;
 $form-multi-select-options-border-radius:  $border-radius !default;
 
 $form-multi-select-optgroup-label-font-weight:  $font-weight-bold !default;
+$form-multi-select-optgroup-label-color:        $disabled !default;
 
 $form-multi-select-option-padding-y:        .5rem !default;
 $form-multi-select-option-padding-x:        1.25rem !default;
 $form-multi-select-option-border-radius:    $border-radius !default;
 
 $form-multi-select-option-hover-color:     shift-color($gray-900, 5) !default;
-$form-multi-select-option-hover-bg:        $gray-100 !default;
+$form-multi-select-option-hover-bg:        rgba($gray-100, .5) !default;
 
 $form-multi-select-option-indicator-width:          1em !default;
 $form-multi-select-option-indicator-bg:             $form-check-input-bg !default;
