--- a/scss/forms/_form-multi-select.scss
+++ b/scss/forms/_form-multi-select.scss
@@ -59,18 +59,17 @@
   width: $form-multi-select-cleaner-width;
   height: $form-multi-select-cleaner-height;
   padding: $form-multi-select-cleaner-padding-y $form-multi-select-cleaner-padding-x;
-  // color: var(--#{$variable-prefix}btn-close-color, $form-multi-select-cleaner-color);
-  background: transparent var(--#{$variable-prefix}form-multi-select-selection-cleaner-bg, escape-svg($form-multi-select-cleaner-bg)) center / $form-multi-select-cleaner-width auto no-repeat;
+  background: transparent var(--#{$variable-prefix}form-multi-select-cleaner-bg, escape-svg($form-multi-select-cleaner-bg)) center / $form-multi-select-cleaner-width auto no-repeat;
   border: 0; // for button elements
-  border-right: 1px solid $form-multi-select-border-color;
+  border-right: 1px solid var(--#{$variable-prefix}form-multi-select-cleaner-border-color, $form-multi-select-cleaner-border-color);
   transform: translateY(-50%);
 
   &:hover {
-    background: transparent var(--#{$variable-prefix}form-multi-select-selection-cleaner-hover-bg, escape-svg($form-multi-select-cleaner-hover-bg)) center / $form-multi-select-cleaner-width auto no-repeat;
+    background: transparent var(--#{$variable-prefix}form-multi-select-cleaner-hover-bg, escape-svg($form-multi-select-cleaner-hover-bg)) center / $form-multi-select-cleaner-width auto no-repeat;
   }
 
   &:focus {
-    background: transparent var(--#{$variable-prefix}form-multi-select-selection-cleaner-focus-bg, escape-svg($form-multi-select-cleaner-focus-bg)) center / $form-multi-select-cleaner-width auto no-repeat;
+    background: transparent var(--#{$variable-prefix}form-multi-select-cleaner-focus-bg, escape-svg($form-multi-select-cleaner-focus-bg)) center / $form-multi-select-cleaner-width auto no-repeat;
     outline: 0;
   }
 }
@@ -98,23 +97,40 @@
   }
 }
 
-.form-multi-select-options {
+.form-multi-select-all {
+  display: block;
+  width: 100%;
+  padding: $form-multi-select-select-all-padding-y $form-multi-select-select-all-padding-x;
+  color: var(--#{$variable-prefix}form-multi-select-select-all-color, $form-multi-select-select-all-color);
+  text-align: start;
+  background-color: var(--#{$variable-prefix}form-multi-select-select-all-bg, $form-multi-select-select-all-bg);
+  border: 0;
+  border-bottom: 1px solid var(--#{$variable-prefix}form-multi-select-select-all-border-color, $form-multi-select-select-all-border-color);
+
+  &:hover {
+    color: var(--#{$variable-prefix}form-multi-select-select-all-hover-color, $form-multi-select-select-all-hover-color);
+    background-color: var(--#{$variable-prefix}form-multi-select-select-all-hover-bg, $form-multi-select-select-all-hover-bg);
+  }
+}
+
+.form-multi-select-dropdown {
   position: absolute;
   top: 100%;
   left: 0;
   display: none; // none by default, but block on "open" of the menu
-  // float: left;
   width: 100%;
-  padding: $form-multi-select-options-padding-y $form-multi-select-options-padding-x;
   margin-top: $form-multi-select-options-margin-top;
-  font-size: $form-multi-select-options-font-size;
-  color: var(--#{$variable-prefix}form-multi-select-options-color, $form-multi-select-options-color);
-  text-align: left; // Ensures proper alignment if parent has it changed (e.g., modal footer)
   background-color: var(--#{$variable-prefix}form-multi-select-options-bg, $form-multi-select-options-bg);
   background-clip: padding-box;
   border: $form-multi-select-options-border-width solid var(--#{$variable-prefix}form-multi-select-options-border-color, $form-multi-select-options-border-color);
   @include border-radius($form-multi-select-options-border-radius);
   @include elevation(4);
+}
+
+.form-multi-select-options {
+  padding: $form-multi-select-options-padding-y $form-multi-select-options-padding-x;
+  font-size: $form-multi-select-options-font-size;
+  color: var(--#{$variable-prefix}form-multi-select-options-color, $form-multi-select-options-color);
 }
 
 .form-multi-select-option {
@@ -168,14 +184,16 @@
       background-color: var(--#{$variable-prefix}form-multi-select-option-selected-indicator-bg, $form-multi-select-option-selected-indicator-bg);
       background-image: var(--#{$variable-prefix}form-multi-select-option-selected-indicator-bg-image, escape-svg($form-multi-select-option-selected-indicator-bg-image));
       border-color: var(--#{$variable-prefix}form-multi-select-option-selected-indicator-border-color, $form-multi-select-option-selected-indicator-border-color);
-      // @include gradient-bg(var(--#{$variable-prefix}form-multi-select-option-indicator-checked-bg, $form-multi-select-option-indicator-checked-bg));
     }
   }
 }
 
 .form-multi-select-optgroup-label {
-  padding: $form-multi-select-option-padding-y ($form-multi-select-option-padding-x / 2);
+  padding: ($form-multi-select-option-padding-y * 1.5) ($form-multi-select-option-padding-x / 2) $form-multi-select-option-padding-y ($form-multi-select-option-padding-x / 2);
+  font-size: 80%;
   font-weight: $form-multi-select-optgroup-label-font-weight;
+  color: $form-multi-select-optgroup-label-color;
+  text-transform: uppercase;
 }
 
 .form-multi-select-options-empty{
@@ -213,7 +231,7 @@
     display: inline;
   }
 
-  .form-multi-select-options {
+  .form-multi-select-dropdown {
     z-index: $zindex-dropdown;
     display: initial;
   }
