--- a/scss/themes/dark.scss
+++ b/scss/themes/dark.scss
@@ -50,5 +50,6 @@ $theme-prefix: "dark" !default;
   }
 
   // Utilities
+  // stylelint-disable-next-line no-invalid-position-at-import-rule
   @import "./../utilities/api";
 }
