--- a/scss/themes/dark/_variables.scss
+++ b/scss/themes/dark/_variables.scss
@@ -357,46 +357,64 @@ $form-multi-select-disabled-color-dt:      $disabled-dt !default;
 $form-multi-select-disabled-bg-dt:         $input-disabled-bg-dt !default;
 
 $form-multi-select-tag-bg-dt:               $light-dt !default;
-$form-multi-select-tag-border-color-dt:      $input-border-color-dt !default;
+$form-multi-select-tag-border-color-dt:     $input-border-color-dt !default;
 
-$form-multi-select-search-color-dt:          $input-color-dt !default;
-$form-multi-select-search-bg-dt:             transparent !default;
-$form-multi-select-search-border-color-dt:   $input-border-color-dt !default;
+$form-multi-select-search-color-dt:         $input-color-dt !default;
+$form-multi-select-search-bg-dt:            transparent !default;
+$form-multi-select-search-border-color-dt:  $input-border-color-dt !default;
 
-$form-multi-select-options-color-dt:          $body-color-dt !default;
-$form-multi-select-options-bg-dt:             $bg-elevation-8 !default;
-$form-multi-select-options-border-color-dt:   $input-border-color-dt !default;
+$form-multi-select-cleaner-color-dt:         $medium-emphasis-dt !default;
+$form-multi-select-cleaner-bg-dt:            url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$form-multi-select-cleaner-color-dt}'><path d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/></svg>") !default;
+$form-multi-select-cleaner-hover-color-dt:   $high-emphasis-dt !default;
+$form-multi-select-cleaner-hover-bg-dt:      url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$form-multi-select-cleaner-hover-color-dt}'><path d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/></svg>") !default;
+$form-multi-select-cleaner-focus-color-dt:   $high-emphasis-dt !default;
+$form-multi-select-cleaner-focus-bg-dt:      url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$form-multi-select-cleaner-focus-color-dt}'><path d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/></svg>") !default;
+$form-multi-select-cleaner-border-color-dt:  $input-border-color-dt !default;
 
-$form-multi-select-option-hover-color-dt:     $body-color-dt !default;
-$form-multi-select-option-hover-bg-dt:        $light-dt !default;
+$form-multi-select-select-all-color-dt:         $medium-emphasis-dt !default;
+$form-multi-select-select-all-bg-dt:            transparent !default;
+$form-multi-select-select-all-hover-color-dt:   $high-emphasis-dt !default;
+$form-multi-select-select-all-hover-bg-dt:      transparent !default;
+$form-multi-select-select-all-border-color-dt:  $input-border-color-dt !default;
 
-$form-multi-select-option-selected-bg-dt:     $light-dt !default;
-// $form-multi-select-option-selected-indicator-bg:            $form-check-input-checked-bg-color !default;
-// $form-multi-select-option-selected-indicator-bg-image:      $form-check-input-checked-bg-image !default;
-// $form-multi-select-option-selected-indicator-border-color:  $form-multi-select-option-selected-indicator-bg !default;
+$form-multi-select-options-color-dt:         $body-color-dt !default;
+$form-multi-select-options-bg-dt:            $bg-elevation-8 !default;
+$form-multi-select-options-border-color-dt:  $input-border-color-dt !default;
 
-// $form-multi-select-option-disabled-color:  $gray-600 !default;
+$form-multi-select-option-hover-color-dt:    $body-color-dt !default;
+$form-multi-select-option-hover-bg-dt:       $light-dt !default;
+
+$form-multi-select-option-selected-bg-dt:    $light-dt !default;
 
 $form-multi-select-theme-map: (
-  "form-multi-select-color":                 $form-multi-select-color-dt,
-  "form-multi-select-bg":                    $form-multi-select-bg-dt,
-  "form-multi-select-border-color":          $form-multi-select-border-color-dt,
-  "form-multi-select-disabled-color":        $form-multi-select-disabled-color-dt,
-  "form-multi-select-disabled-bg":           $form-multi-select-disabled-bg-dt,
-  "form-multi-select-focus-color":           $form-multi-select-focus-color-dt,
-  "form-multi-select-focus-bg":              $form-multi-select-focus-bg-dt,
-  "form-multi-select-focus-border-color":    $form-multi-select-focus-border-color-dt,
-  "form-multi-select-tag-bg":                $form-multi-select-tag-bg-dt,
-  "form-multi-select-tag-border-color":      $form-multi-select-tag-border-color-dt,
-  "form-multi-select-search-color":          $form-multi-select-search-color-dt,
-  "form-multi-select-search-bg":             $form-multi-select-search-bg-dt,
-  "form-multi-select-search-border-color":   $form-multi-select-search-border-color-dt,
-  "form-multi-select-options-color":         $form-multi-select-options-color-dt,
-  "form-multi-select-options-bg":            $form-multi-select-options-bg-dt,
-  "form-multi-select-options-border-color":  $form-multi-select-options-border-color-dt,
-  "form-multi-select-option-hover-color":    $form-multi-select-option-hover-color-dt,
-  "form-multi-select-option-hover-bg":       $form-multi-select-option-hover-bg-dt,
-  "form-multi-select-option-selected-bg":    $form-multi-select-option-selected-bg-dt,
+  "form-multi-select-color":                    $form-multi-select-color-dt,
+  "form-multi-select-bg":                       $form-multi-select-bg-dt,
+  "form-multi-select-border-color":             $form-multi-select-border-color-dt,
+  "form-multi-select-disabled-color":           $form-multi-select-disabled-color-dt,
+  "form-multi-select-disabled-bg":              $form-multi-select-disabled-bg-dt,
+  "form-multi-select-focus-color":              $form-multi-select-focus-color-dt,
+  "form-multi-select-focus-bg":                 $form-multi-select-focus-bg-dt,
+  "form-multi-select-focus-border-color":       $form-multi-select-focus-border-color-dt,
+  "form-multi-select-tag-bg":                   $form-multi-select-tag-bg-dt,
+  "form-multi-select-tag-border-color":         $form-multi-select-tag-border-color-dt,
+  "form-multi-select-search-color":             $form-multi-select-search-color-dt,
+  "form-multi-select-search-bg":                $form-multi-select-search-bg-dt,
+  "form-multi-select-search-border-color":      $form-multi-select-search-border-color-dt,
+  "form-multi-select-cleaner-bg":               $form-multi-select-cleaner-bg-dt,
+  "form-multi-select-cleaner-hover-bg":         $form-multi-select-cleaner-hover-bg-dt,
+  "form-multi-select-cleaner-focus-bg":         $form-multi-select-cleaner-focus-bg-dt,
+  "form-multi-select-cleaner-border-color":     $form-multi-select-cleaner-border-color-dt,
+  "form-multi-select-select-all-color":         $form-multi-select-select-all-color-dt,
+  "form-multi-select-select-all-bg":            $form-multi-select-select-all-bg-dt,
+  "form-multi-select-select-all-hover-color":   $form-multi-select-select-all-hover-color-dt,
+  "form-multi-select-select-all-hover-bg":      $form-multi-select-select-all-hover-bg-dt,
+  "form-multi-select-select-all-border-color":  $form-multi-select-select-all-border-color-dt,
+  "form-multi-select-options-color":            $form-multi-select-options-color-dt,
+  "form-multi-select-options-bg":               $form-multi-select-options-bg-dt,
+  "form-multi-select-options-border-color":     $form-multi-select-options-border-color-dt,
+  "form-multi-select-option-hover-color":       $form-multi-select-option-hover-color-dt,
+  "form-multi-select-option-hover-bg":          $form-multi-select-option-hover-bg-dt,
+  "form-multi-select-option-selected-bg":       $form-multi-select-option-selected-bg-dt,
 ) !default;
 
 // Header
