refactor(MultiSelect): cupdate tag delete button

--- a/scss/forms/_form-multi-select.scss
+++ b/scss/forms/_form-multi-select.scss
@@ -211,8 +211,9 @@
 }
 
 .form-multi-select-tag-delete {
+  padding: 0;
   margin-left: 6px;
-  cursor: pointer;
+  border: 0;
 }
 
 .form-multi-select.show {
