fix(Icon): add missing icon sizes

--- a/scss/_icon.scss
+++ b/scss/_icon.scss
@@ -7,6 +7,10 @@
   &:not(.icon-c-s):not(.icon-custom-size) {
     @include icon-size($icon-size-base);
 
+    &.icon-xxl {
+      @include icon-size($icon-size-xxl);
+    }
+
     &.icon-xl {
       @include icon-size($icon-size-xl);
     }
@@ -17,6 +21,12 @@
 
     &.icon-sm {
       @include icon-size($icon-size-sm);
+    }
+
+    @for $i from 3 through 9 {
+      &.icon-#{$i}xl {
+        @include icon-size($i * $icon-size-base);
+      }
     }
   }
 }
