--- a/scss/sidebar/_sidebar.scss
+++ b/scss/sidebar/_sidebar.scss
@@ -38,14 +38,16 @@
   @each $width, $value in $sidebar-widths {
     &.sidebar-#{$width} {
       --#{$variable-prefix}sidebar-width: #{$value};
-      &:not(.sidebar-end) {
-        ~ * {
-          --#{$variable-prefix}sidebar-occupy-start: #{$value};
+      @include media-breakpoint-up($mobile-breakpoint) {
+        &:not(.sidebar-end):not(.hide) {
+          ~ * {
+            --#{$variable-prefix}sidebar-occupy-start: #{$value};
+          }
         }
-      }
-      &.sidebar-end {
-        ~ * {
-          --#{$variable-prefix}sidebar-occupy-end: #{$value};
+        &.sidebar-end:not(.hide) {
+          ~ * {
+            --#{$variable-prefix}sidebar-occupy-end: #{$value};
+          }
         }
       }
     }
