fix(Dropdown): the dark theme doesnt work if the wrapper doesnt have `.dropdown` class

--- a/scss/themes/dark/_variables.scss
+++ b/scss/themes/dark/_variables.scss
@@ -766,7 +766,7 @@ $theme-map: (
   "breadcrumb":         $breadcrumb-theme-map,
   "btn-close":          $close-theme-map,
   "card":               $card-theme-map,
-  "dropdown":           $dropdown-theme-map,
+  "dropdown-menu":      $dropdown-theme-map,
   "footer":             $footer-theme-map,
   "form-control":       $form-control-theme-map,
   "form-check":         $form-check-theme-map,
